--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,19 @@ img {
   height: auto;
 }
 
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 .link {
   text-decoration: none;
 }
@@ -58,8 +71,11 @@ img {
 
 /* Header section */
 .header {
-  background-color: #323232;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
   border-bottom: 1px solid rgba(161, 161, 161, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .header-list {
@@ -75,12 +91,24 @@ img {
   font-size: 16px;
   line-height: 1.25;
   color: var(--secondary-text-color);
+  position: relative;
+}
+
+.header-link.active::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  display: block;
+  background-color: #ffffff;
+  left: 0;
+  bottom: 0;
 }
 
 /*  Hero section */
 
 .hero {
-  padding-top: 220px;
+  padding-top: 320px;
   padding-bottom: 335px;
   background-image: linear-gradient(
       0deg,
@@ -145,6 +173,7 @@ img {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button {
@@ -192,6 +221,7 @@ img {
 
 .services-icon {
   fill: var(--accent-color);
+  transition: fill 2000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .circle {
@@ -199,6 +229,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .inner-circle {
@@ -377,4 +408,109 @@ img {
 
 .projects-button {
   margin: 0 auto;
+}
+
+.video {
+  background-image: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0.15),
+      rgba(255, 255, 255, 0.15)
+    ),
+    url('../images/mainbg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding-top: 70px;
+  padding-bottom: 420px;
+  position: relative;
+}
+
+.video-title {
+  color: var(--primary-title-color);
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.video-txt {
+  font-size: 16px;
+  line-height: 1.56;
+  text-align: center;
+
+  color: var(--secondary-text-color);
+}
+
+.video-content {
+  position: absolute;
+  width: 970px;
+  height: 430px;
+  bottom: -80px;
+  left: calc(50% - 485px);
+}
+
+.subscribe {
+  padding-top: 165px;
+  padding-bottom: 85px;
+}
+
+.subscribe .container {
+  border-top: 1px solid #e0e0e0;
+  padding-top: 85px;
+}
+
+.subscribe-subtitle {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.22;
+  text-align: center;
+  margin-bottom: 20px;
+  color: var(--subtitle-color);
+}
+
+.subscribe-text-top {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: scale(1);
+  transition: all 400ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  width: 500px;
+  height: 600px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  position: relative;
+}
+
+.backdrop .modal {
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: 1px solid #e0e0e0;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  /* opacity: 0; */
+  pointer-events: none;
+  transform: scale(0.1);
 }
