--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ ul {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -393,16 +393,16 @@ img {
 }
 
 .projects-list {
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
-  margin-top: -30px;
+  margin-top: -30px; */
   margin-bottom: 50px;
 }
 
 .projects-item {
-  flex-basis: calc((100% - 120px) / 4);
-  margin-left: 30px;
+  /* flex-basis: calc((100% - 120px) / 4);
+  margin-left: 30px; */
   margin-top: 30px;
 }
 
@@ -471,7 +471,7 @@ img {
   margin-bottom: 30px;
 }
 
-.backdrop {
+/* .backdrop {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -492,6 +492,7 @@ img {
   background-color: #ffffff;
   border-radius: 5px;
   position: relative;
+  padding: 40px;
 }
 
 .backdrop .modal {
@@ -509,8 +510,136 @@ img {
 }
 
 .backdrop.is-hidden {
-  visibility: hidden;
-  /* opacity: 0; */
-  pointer-events: none;
+  visibility: hidden; */
+/* opacity: 0; */
+/* pointer-events: none;
   transform: scale(0.1);
 }
+
+.modal-title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.2;
+  color: var(--secondary-title-color);
+  margin-bottom: 16px;
+}
+
+.modal-field {
+  position: relative;
+  margin-bottom: 16px;
+}
+
+.modal-label {
+  display: block;
+  font-size: 12px;
+}
+
+.modal-input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  font-size: 14px;
+  border: 1px solid #999;
+  border-radius: 4px;
+  padding-left: 20px;
+  outline: none;
+}
+
+.modal-input:hover,
+.modal-input:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-input:hover + .input-icon,
+.modal-input:focus + .input-icon {
+  fill: var(--accent-color);
+}
+
+.modal-input::placeholder {
+  color: green;
+}
+
+.input-icon {
+  position: absolute;
+  top: 32px;
+  left: 7px;
+}
+
+.modal-text {
+  width: 100%;
+  height: 120px;
+  border: 1px solid #999;
+  border-radius: 4px;
+  font-size: 14px;
+  resize: none;
+  padding-left: 20px;
+  padding-top: 10px;
+}
+
+.check-label {
+  position: relative;
+  padding-left: 70px;
+  display: flex;
+  align-items: center;
+} */
+
+/* .check-wrap {
+  width: 15px;
+  height: 15px;
+  border: 2px solid #000000;
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 5px;
+} */
+
+/* .check-icon {
+  fill: #ffffff;
+  margin-right: 11px;
+  position: absolute;
+  left: 0;
+} */
+
+/* .input-check:checked + .check-label .check-wrap {
+  background-color: var(--accent-color);
+  border: none;
+} */
+
+.check-label::before {
+  position: absolute;
+  content: '';
+  width: 50px;
+  height: 30px;
+  border: 2px solid #e0e0e0;
+  border-radius: 50px;
+  display: block;
+  left: 0;
+}
+
+.input-check:checked + .check-label::after {
+  transform: translateX(20px);
+  background-color: rgb(145, 224, 145);
+
+  border: none;
+}
+
+.modal-button {
+  margin: 0 auto;
+}
+
+.check-label::after {
+  position: absolute;
+  content: '';
+  width: 24px;
+  height: 24px;
+  background-color: #999;
+  border-radius: 50%;
+  display: block;
+  left: 3px;
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
