--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,4 @@
-:root {
-  --primary-title-color: #fff;
-  --secondary-title-color: #323232;
-  --primary-text-color: #999;
-  --secondary-text-color: #fff;
-  --accent-color: #4985ff;
-  --subtitle-color: #000000;
-  --bg-color: #f6f6f8;
-}
-
-/* body {
+body {
   font-family: Montserrat, sans-serif;
 }
 
@@ -55,72 +45,11 @@ img {
   text-decoration: none;
 }
 
-.container {
-  width: 1140px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
-}
-
 .typical-link {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.25;
   color: var(--accent-color);
-} */
-
-/* Header section */
-/* .header {
-  position: fixed;
-  z-index: 1;
-  width: 100%;
-  border-bottom: 1px solid rgba(161, 161, 161, 0.5);
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.header-list {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.header-link {
-  display: block;
-  padding: 40px 20px;
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.25;
-  color: var(--secondary-text-color);
-  position: relative;
-}
-
-.header-link.active::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  display: block;
-  background-color: #ffffff;
-  left: 0;
-  bottom: 0;
-} */
-
-/*  Hero section */
-
-.hero {
-  padding-top: 320px;
-  padding-bottom: 335px;
-  background-image: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)
-    ),
-    url('../images/mainbg.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  max-width: 1920px;
-  margin: 0 auto;
 }
 
 .section-title {
@@ -136,29 +65,7 @@ img {
   color: var(--primary-text-color);
 }
 
-.hero {
-  background-color: var(--secondary-title-color);
-}
-.hero-text {
-  margin-bottom: 20px;
-
-  color: var(--secondary-text-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.25;
-  text-align: center;
-}
-.hero-title {
-  max-width: 829px;
-  margin: 0 auto 50px;
-
-  font-weight: 800;
-  font-size: 48px;
-  line-height: 1.33;
-  text-align: center;
-  color: var(--primary-title-color);
-}
-/* .button {
+.button {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.25;
@@ -174,22 +81,88 @@ img {
   justify-content: center;
   cursor: pointer;
   transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
 
-.hero-button {
+.header {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  border-bottom: 1px solid rgba(161, 161, 161, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.header .header-list {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.header .header-list .header-link {
+  display: block;
+  padding: 40px 20px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  color: var(--secondary-text-color);
+  position: relative;
+}
+
+.header .header-list .header-link.active::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  display: block;
+  background-color: #ffffff;
+  left: 0;
+  bottom: 0;
+}
+
+.header-link.active::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  display: block;
+  background-color: #ffffff;
+  left: 0;
+  bottom: 0;
+}
+
+.hero {
+  padding-top: 320px;
+  padding-bottom: 335px;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../images/mainbg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  max-width: 1920px;
   margin: 0 auto;
 }
 
-.button:hover,
-.button:focus {
-  background-color: transparent;
-  border-color: var(--accent-color);
-  color: var(--accent-color);
+.hero {
+  background-color: var(--secondary-title-color);
 }
 
-/* Services section */
+.hero-text {
+  margin-bottom: 20px;
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  text-align: center;
+}
 
-/* .services {
+.hero-title {
+  max-width: 829px;
+  margin: 0 auto 50px;
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 1.33;
+  text-align: center;
+  color: var(--primary-title-color);
+}
+
+.services {
   padding-top: 110px;
   padding-bottom: 105px;
 }
@@ -197,7 +170,6 @@ img {
 .services-title {
   max-width: 739px;
   margin: 0 auto 50px;
-
   color: var(--secondary-title-color);
   text-align: center;
 }
@@ -246,6 +218,12 @@ img {
   fill: #fff;
 }
 
+.inner-circle:hover, .inner-circle:focus,
+.inner-circle:hover .services-icon,
+.inner-circle:focus .services-icon {
+  background-color: var(--accent-color);
+}
+
 .outer-circle {
   width: 110px;
   height: 110px;
@@ -275,24 +253,13 @@ img {
   line-height: 1.22;
   color: var(--subtitle-color);
 }
+
 .services-list-text {
   font-size: 14px;
 }
 
 .services-button {
   margin: 0 auto;
-} */
-
-/* About section */
-
-/* .about {
-  padding-top: 100px;
-  padding-bottom: 70px;
-  background-color: var(--bg-color);
-}
-
-.about-content {
-  max-width: 489px;
 }
 
 .about-wrapper {
@@ -306,11 +273,10 @@ img {
 
 .about-title {
   margin-bottom: 14px;
+  color: var(--secondary-title-color);
+}
 
-  color: var(--secondary-title-color); 
-}*/
-
-/* .about-text {
+.about-text {
   margin-bottom: 30px;
 }
 
@@ -332,11 +298,10 @@ img {
 .about-project-number {
   font-size: 36px;
   line-height: 1.47;
-
   color: var(--subtitle-color);
-} */
+}
 
-/* .works {
+.works {
   padding-top: 100px;
   padding-bottom: 85px;
   background: linear-gradient(180deg, #504dc2 50%, #ffffff 50%);
@@ -363,9 +328,9 @@ img {
   border-bottom: 1px solid #e0e0e0;
 }
 
-.works-item { */
-/* width: calc((100% - 60px) / 3); */
-/* width: 350px;
+.works-item {
+  /* width: calc((100% - 60px) / 3); */
+  width: 350px;
   margin-left: 30px;
   margin-top: 30px;
 }
@@ -374,9 +339,9 @@ img {
 .work-subtitle,
 .works-txt {
   margin-bottom: 30px;
-} */
+}
 
-/* .projects {
+.projects {
   padding-top: 100px;
   padding-bottom: 130px;
 }
@@ -408,15 +373,10 @@ img {
 
 .projects-button {
   margin: 0 auto;
-} */
+}
 
-/* .video {
-  background-image: linear-gradient(
-      0deg,
-      rgba(255, 255, 255, 0.15),
-      rgba(255, 255, 255, 0.15)
-    ),
-    url('../images/mainbg.jpg');
+.video {
+  background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), url("../images/mainbg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -435,7 +395,6 @@ img {
   font-size: 16px;
   line-height: 1.56;
   text-align: center;
-
   color: var(--secondary-text-color);
 }
 
@@ -445,9 +404,9 @@ img {
   height: 430px;
   bottom: -80px;
   left: calc(50% - 485px);
-} */
+}
 
-/* .subscribe {
+.subscribe {
   padding-top: 165px;
   padding-bottom: 85px;
 }
@@ -469,198 +428,5 @@ img {
 .subscribe-text-top {
   text-align: center;
   margin-bottom: 30px;
-} */
-
-/* .backdrop {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  z-index: 2;
-  left: 0;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transform: scale(1);
-  transition: all 400ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal {
-  width: 500px;
-  height: 600px;
-  background-color: #ffffff;
-  border-radius: 5px;
-  position: relative;
-  padding: 40px;
-} */
-
-.backdrop .modal {
-}
-
-.close-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: none;
-  border: 1px solid #e0e0e0;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-}
-
-.backdrop.is-hidden {
-  visibility: hidden;
-  /* opacity: 0; */
-  pointer-events: none;
-  transform: scale(0.1);
-}
-
-.modal-title {
-  text-align: center;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.2;
-  color: var(--secondary-title-color);
-  margin-bottom: 16px;
-}
-
-.modal-field {
-  position: relative;
-  margin-bottom: 16px;
-}
-
-.modal-label {
-  display: block;
-  font-size: 12px;
-}
-
-.modal-input {
-  display: block;
-  width: 100%;
-  height: 40px;
-  font-size: 14px;
-  border: 1px solid #999;
-  border-radius: 4px;
-  padding-left: 20px;
-  outline: none;
-}
-
-.modal-input:hover,
-.modal-input:focus {
-  border-color: var(--accent-color);
-}
-
-.modal-input:hover + .input-icon,
-.modal-input:focus + .input-icon {
-  fill: var(--accent-color);
-}
-
-.modal-input::placeholder {
-  color: green;
-}
-
-.input-icon {
-  position: absolute;
-  top: 32px;
-  left: 7px;
-}
-
-.modal-text {
-  width: 100%;
-  height: 120px;
-  border: 1px solid #999;
-  border-radius: 4px;
-  font-size: 14px;
-  resize: none;
-  padding-left: 20px;
-  padding-top: 10px;
-}
-
-.check-label {
-  position: relative;
-  padding-left: 70px;
-  display: flex;
-  align-items: center;
-}
-
-.check-wrap {
-  width: 15px;
-  height: 15px;
-  border: 2px solid #000000;
-  border-radius: 2px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 5px;
-}
-
-.check-icon {
-  fill: #ffffff;
-  margin-right: 11px;
-  position: absolute;
-  left: 0;
-}
-
-.input-check:checked + .check-label .check-wrap {
-  background-color: var(--accent-color);
-  border: none;
-}
-
-.check-label::before {
-  position: absolute;
-  content: '';
-  width: 50px;
-  height: 30px;
-  border: 2px solid #e0e0e0;
-  border-radius: 50px;
-  display: block;
-  left: 0;
-}
-
-.input-check:checked + .check-label::after {
-  transform: translateX(20px);
-  background-color: rgb(145, 224, 145);
-
-  border: none;
-}
-
-.modal-button {
-  margin: 0 auto;
-}
-
-.check-label::after {
-  position: absolute;
-  content: '';
-  width: 24px;
-  height: 24px;
-  background-color: #999;
-  border-radius: 50%;
-  display: block;
-  left: 3px;
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.slick-next:before,
-.slick-prev:before {
-  color: green;
-  font-size: 40px;
-}
-
-.slick-next:before {
-  content: '➬';
-}
-
-.slick-dots li button:before {
-  content: '🙃';
-  font-size: 18px;
-}
-
-.slick-dots li.slick-active button:before {
-  content: '😬';
-}
-
-.my-btn.btn-primary {
-  background-color: rgb(14, 14, 78);
-}
+/*# sourceMappingURL=main.css.map */
