--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -45,12 +45,12 @@ img {
   text-decoration: none;
 }
 
-// .container {
-//   width: 1140px;
-//   padding-left: 15px;
-//   padding-right: 15px;
-//   margin: 0 auto;
-// }
+.container {
+  width: 1140px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
 
 .typical-link {
   font-weight: 500;
