--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,13 @@ img {
   text-decoration: none;
 }
 
+.container {
+  width: 1140px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
 .typical-link {
   font-weight: 500;
   font-size: 16px;
